增加AHEAD弹药机制